# idasql

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ida-plugin.json  ida-plugin.json.in
.github/workflows/: build.yml
cmake/: versioninfo.cmake  versioninfo.rc.in
examples/: example_basic.cpp  example_decompiler.cpp  example_functions.cpp  example_grep_search.cpp  example_instructions.cpp  example_strings.cpp
prompts/: idasql_agent.md
src/cli/: CMakeLists.txt  main.cpp
src/common/: http_server.cpp  http_server.hpp  idasql_commands.hpp  idasql_version.hpp  json_utils.hpp  mcp_server.cpp  pin_commands.hpp
src/lib/: CMakeLists.txt
src/lib/include/idasql/: autostart_pin.hpp  database.hpp  fwd.hpp  idasql_config.hpp  string_utils.hpp  ui_context_provider.hpp  vtable.hpp
src/lib/src/: address_resolution.cpp  address_resolution.hpp  autostart_pin.cpp  code.hpp  code_blocks.cpp  code_blocks.hpp  code_calls.cpp  code_calls.hpp  code_cfg.cpp  code_cfg.hpp  code_funcs.cpp  code_funcs.hpp  code_graph.cpp  code_graph.hpp  code_instructions.cpp  code_instructions.hpp  code_loops.cpp  code_loops.hpp  code_operand_repr.cpp  code_operand_repr.hpp  core.hpp  core_common.cpp  core_common.hpp  core_registry.cpp  database.cpp  decompiler.cpp  decompiler.hpp  dirtree_utils.cpp  dirtree_utils.hpp  disassembly.cpp  entities.cpp  entities.hpp  entities_dbg.cpp  entities_types.cpp  entities_types.hpp  functions.cpp  ida_compat.cpp  ida_compat.hpp  ida_headers.hpp  memory.hpp  (+44 more)
src/plugin/: CMakeLists.txt  main.cpp
