# idasql CLI - Command-line SQL interface to IDA databases
# Built as part of the main idasql project

# idasql CLI executable
ida_add_idalib(idasql_cli
    TYPE EXECUTABLE
    SOURCES
        main.cpp
)
target_link_libraries(idasql_cli PRIVATE xsql::xsql)
target_link_libraries(idasql_cli PRIVATE idasql)
target_include_directories(idasql_cli PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../lib/include)
target_compile_definitions(idasql_cli PRIVATE USE_IDA_SDK USE_HEXRAYS)

# Output name: idasql (not idasql_cli), placed next to ida.exe for idalib
set_target_properties(idasql_cli PROPERTIES
    OUTPUT_NAME "idasql"
    RUNTIME_OUTPUT_DIRECTORY "${IDABIN}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${IDABIN}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${IDABIN}"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${IDABIN}"
)

# Add Windows manifest for UTF-8 support (Windows 10 1903+)
if(WIN32)
    target_sources(idasql_cli PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/idasql.manifest
    )
endif()

# Platform-specific settings
if(MSVC)
    target_compile_options(idasql_cli PRIVATE /bigobj)
    file(TO_NATIVE_PATH "${IDABIN}" IDABIN_NATIVE)
    set_target_properties(idasql_cli PROPERTIES
        VS_DEBUGGER_ENVIRONMENT "PATH=${IDABIN_NATIVE};%PATH%"
    )
    target_link_libraries(idasql_cli PRIVATE ws2_32)
elseif(APPLE)
    set_target_properties(idasql_cli PROPERTIES
        BUILD_WITH_INSTALL_RPATH TRUE
        INSTALL_RPATH "@executable_path/"
    )
elseif(UNIX)
    set_target_properties(idasql_cli PROPERTIES
        BUILD_WITH_INSTALL_RPATH TRUE
        INSTALL_RPATH "$ORIGIN"
    )
endif()

# MCP support (from parent project)
if(IDASQL_WITH_MCP)
    target_sources(idasql_cli PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/mcp_server.cpp
    )
    target_include_directories(idasql_cli PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../common
    )
    target_link_libraries(idasql_cli PRIVATE fastmcpp_core)
    target_compile_definitions(idasql_cli PRIVATE IDASQL_HAS_MCP)

    message(STATUS "idasql_cli: MCP support enabled")
endif()

# HTTP server support
target_sources(idasql_cli PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/http_server.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/welcome_query.cpp
)
target_compile_definitions(idasql_cli PRIVATE XSQL_HAS_THINCLIENT)

# cpp-httplib: provided transitively by xsql::xsql when XSQL_WITH_THINCLIENT=ON.
# Only fetch standalone if the target doesn't already exist (e.g. standalone build).
if(NOT TARGET httplib)
    include(FetchContent)
    FetchContent_Declare(
        cpp_httplib
        GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
        GIT_TAG v0.15.3
    )
    FetchContent_MakeAvailable(cpp_httplib)
    target_include_directories(idasql_cli PRIVATE ${cpp_httplib_SOURCE_DIR})
endif()

# idasql.exe is placed next to ida.exe via RUNTIME_OUTPUT_DIRECTORY above.
